--- a/app/static/app/styles.css
+++ b/app/static/app/styles.css
@@ -68,7 +68,7 @@ body {
 }
 
 /* Cards */
-.band {
+.band, .dashBand {
   width: auto;
   max-width: 1240px;
   margin: 0 auto;
@@ -78,12 +78,17 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   grid-gap: 20px;
-
 }
 
 @media only screen and (min-width: 850px) {
   .band {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 850px) {
+  .dashBand {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
