--- a/app/templates/app/meals.html
+++ b/app/templates/app/meals.html
@@ -58,6 +58,14 @@
         </a>
       </div>
     {% endfor %}  
+
+    <div class="item"><h3>Monday</h3></div>
+    <div class="item"><h3>Tuesday</h3></div>
+    <div class="item"><h3>Wednesday</h3></div>
+    <div class="item"><h3>Thursday</h3></div>
+    <div class="item"><h3>Friday</h3></div>
+    <div class="item"><h3>Saturday</h3></div>
+    <div class="item"><h3>Sunday</h3></div>
   </div>
   <!--
   <div class="container">
