Added some icons

--- a/app/templates/app/meals.html
+++ b/app/templates/app/meals.html
@@ -20,8 +20,8 @@
           <div class="thumb" style="background-image: url({{breakfast.image}});"></div>
           <article>
             <h1>{{breakfast.title}}</h1>
-            <p>Rating: {{breakfast.rating|floatformat:-2}}/5 <br/>
-               Ready in: {{breakfast.minutes}} min
+            <p><i class="far fa-star"></i> Rating: {{breakfast.rating|floatformat:-2}}/5 <br/>
+              <i class="far fa-clock"></i> Ready in: {{breakfast.minutes}} min
             </p>
             <span>Breakfast</span>
           </article>
