--- a/app/static/app/styles.css
+++ b/app/static/app/styles.css
@@ -71,7 +71,7 @@ body {
 }
 
 /* Cards */
-.band {
+.band, .dashBand {
   width: auto;
   max-width: 1240px;
   margin: 0 auto;
@@ -87,6 +87,12 @@ body {
 @media only screen and (min-width: 850px) {
   .band {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 850px) {
+  .dashBand {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
