--- a/app/static/app/styles.css
+++ b/app/static/app/styles.css
@@ -155,7 +155,28 @@ body {
   margin: 0 0 0 0;
 }
 
+.preference-title li label {
+  font-size: 20px;
+}
 
+.preference-wrapper ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.preference-wrapper ul li {
+  float: left;
+  width: 75px;
+}
+
+.preference-wrapper ul li label {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
 
 /* Chatbot */
 /*
