--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -2,11 +2,21 @@
 {% block title %}Mealy - Dashboard{% endblock %}
 
 {% block content %}
-    <h2>Mealy Dashboard</h2>
-    <p>Welcome to Mealy, your cognitive weekly meal planner! Get started by clicking one of the cards below to set up text message meal reminders, update your ingredient preferences, and to view your tailored meal plan!</p>
-    <br>
+    
     <div class="support-grid"></div>
     <div class="dashBand">
+        <div class="dashBanner">
+            <h1>Welcome to<span class="logoFont"> mealy</span></h1>
+            <p>Welcome to Mealy, your cognitive weekly meal planner. Mealy leverages the power of IBM Watson and AllRecipes.com to deliver 
+                a customized eating experience for everyone. 
+            </p>
+            <br>
+        </div>
+        <div class="itemWide">
+            <h2>Mealy Dashboard</h2>
+            <p>This is the dashboard! You can get started by clicking one of these cards to set up text message meal reminders, update your ingredient preferences, and to view your tailored meal plan!</p>
+            <br>
+        </div>
         <div class="item">
             <a href="{% url 'userInfo' %}" class="card">
                 <div class="thumb" style="background-image: url(https://www.graphicpear.com/wp-content/uploads/2018/02/Device-Icons-Dark.jpg);"></div>
@@ -31,16 +41,16 @@
             </a>
         </div>
 
-            <div class="item">
-                <a href="{% url 'meals' %}" class="card">
-                    <div class="thumb" style="background-image: url(https://www.graphicpear.com/wp-content/uploads/2017/05/35ff0051885341.58fdb827aaf01a.jpg);"></div>
-                    <article>
-                        <h1>Meal Plan</h1>
-                        <p>Check out some of the custom tailored meals that we've created for you for this week!   
-                        </p>
-                        <span>Meal Plan</span>
-                    </article>
-                </a>
-            </div>
+        <div class="item">
+            <a href="{% url 'meals' %}" class="card">
+                <div class="thumb" style="background-image: url(https://www.graphicpear.com/wp-content/uploads/2017/05/35ff0051885341.58fdb827aaf01a.jpg);"></div>
+                <article>
+                    <h1>Meal Plan</h1>
+                    <p>Check out some of the custom tailored meals that we've created for you for this week!   
+                    </p>
+                    <span>Meal Plan</span>
+                </article>
+            </a>
+        </div>
     </div>
 {% endblock %}
