--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,9 +26,21 @@
     {% endif %}
   </div>
 
+  <br>
+  <br>
+  <br>
+
   <div class="main">
   {% block content %}
   {% endblock %}
-  </div>  
+  </div> 
+  
+  <br>
+  <br>
+  <br>
+
+  <div class="footer">
+    <p><span class="logoFont white">mealy</span> | made with <i class="fas fa-heart red"></i> by Brain, Zack D, Zach L, Zach W, and Sean</p>
+  </div>
 </body>
 </html>
