--- a/app/templates/app/meals.html
+++ b/app/templates/app/meals.html
@@ -30,7 +30,11 @@
       <h1>This Week's Meals</h1>
       <p>Here is your weekly meal plan! Select a meal to see what ingredients you need and how to prepare it. If you'd like to return to the dashboard, click the dashboard button below. When you want to generate a new meal plan for another week, or if you're unhappy with the current meal plan, hit the new meals button below.</p>
       <a href="{% url 'index' %}" class="buttonRound" type="submit">Dashboard</a>
+      <form class="" action="" method="POST">
+      {% csrf_token %}
+      {{ form.as_p }}
       <button class="buttonRound" type="submit" name="newMeals">New Meals</button>
+      </form>
     </div>
 
     <div class="item"><h3>Monday</h3></div>
@@ -68,7 +72,7 @@
           </ul>
           <h2><i class="fas fa-align-left"></i> Directions</h2>
           <p>{{breakfast.instructions}}</p>
-        </div>  
+        </div>
       </div>
     {% endfor %}
 
@@ -99,7 +103,7 @@
             </ul>
             <h2><i class="fas fa-align-left"></i> Directions</h2>
             <p>{{lunch.instructions}}</p>
-          </div>  
+          </div>
         </div>
     {% endfor %}
 
@@ -130,7 +134,7 @@
             </ul>
             <h2><i class="fas fa-align-left"></i> Directions</h2>
             <p>{{dinner.instructions}}</p>
-          </div>  
+          </div>
         </div>
     {% endfor %}
   </div>
