--- a/app/static/app/styles.css
+++ b/app/static/app/styles.css
@@ -241,10 +241,6 @@ body {
   grid-gap: 20px;
 }
 
-.preference-title li {
-    margin: 20px 0 5px 0;
-}
-
 .preference-title li label {
   font-size: 20px;
   font-weight: bold;
@@ -288,6 +284,7 @@ body {
 .item.preference-wrapper p {
   font-size: 14px;
   font-weight: bold;
+  margin: 0;
 }
 /* Chatbot */
 /*
