--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -8,7 +8,8 @@
         <div class="dashBanner">
             <h1>Welcome to<span class="logoFont"> mealy</span></h1>
             <p>Welcome to Mealy, your cognitive weekly meal planner. Mealy leverages the power of IBM Watson and AllRecipes.com to deliver 
-                a customized eating experience for everyone. 
+                a customized eating experience for everyone. From this page, you can access everything you need to start eating exciting, new meals 
+                designed just for you.
             </p>
             <br>
         </div>
