Added potential calories input

--- a/app/templates/app/meals.html
+++ b/app/templates/app/meals.html
@@ -51,7 +51,8 @@
           <article>
             <h1>{{breakfast.title}}</h1>
             <p><i class="far fa-star"></i> Rating: {{breakfast.rating|floatformat:-2}}/5 <br/>
-              <i class="far fa-clock"></i> Ready in: {{breakfast.minutes}} min
+               <i class="far fa-clock"></i> Ready in: {{breakfast.minutes}} min<br/>
+               <i class="fab fa-gripfire"></i> Cals: 
             </p>
             <span>Breakfast</span>
           </article>
@@ -62,7 +63,7 @@
         <div class="modal-content">
           <span onclick="closeModal('{{breakfast.id}}')" class="close"><i class="far fa-times-circle"></i></span>
           <h1><i class="fas fa-utensils"></i> {{breakfast.title}}</h1>
-          <p><i class="far fa-star"></i> Rating: {{breakfast.rating|floatformat:-2}}/5<br><i class="far fa-clock"></i> Ready in: {{breakfast.minutes}} minutes</p>
+          <p><i class="far fa-star"></i> Rating: {{breakfast.rating|floatformat:-2}}/5<br><i class="far fa-clock"></i> Ready in: {{breakfast.minutes}} minutes<br /><i class="fab fa-gripfire"></i> Calories: </p>
           <h2><i class="fas fa-list-ul"></i> Ingredients</h2>
           <ul>
             {% for ingredient in breakfast.ingredients %}
@@ -81,8 +82,9 @@
           <div class="thumb" style="background-image: url({{lunch.image}});"></div>
           <article>
             <h1>{{lunch.title}}</h1>
-            <p>Rating: {{lunch.rating|floatformat:-2}}/5 <br/>
-                Ready in: {{lunch.minutes}} min
+            <p><i class="far fa-star"></i>Rating: {{lunch.rating|floatformat:-2}}/5 <br/>
+               <i class="far fa-clock"></i>Ready in: {{lunch.minutes}} min<br/>
+               <i class="fab fa-gripfire"></i> Cals: 
             </p>
             <span>Lunch</span>
           </article>
@@ -93,7 +95,7 @@
           <div class="modal-content">
             <span onclick="closeModal('{{lunch.id}}')" class="close"><i class="far fa-times-circle"></i></span>
             <h1><i class="fas fa-utensils"></i> {{lunch.title}}</h1>
-            <p><i class="far fa-star"></i> Rating: {{lunch.rating|floatformat:-2}}/5<br><i class="far fa-clock"></i> Ready in: {{lunch.minutes}} minutes</p>
+            <p><i class="far fa-star"></i> Rating: {{lunch.rating|floatformat:-2}}/5<br><i class="far fa-clock"></i> Ready in: {{lunch.minutes}} minutes<br /><i class="fab fa-gripfire"></i> Calories: </p>
             <h2><i class="fas fa-list-ul"></i> Ingredients</h2>
             <ul>
               {% for ingredient in lunch.ingredients %}
@@ -112,8 +114,9 @@
           <div class="thumb" style="background-image: url({{dinner.image}});"></div>
           <article>
             <h1>{{dinner.title}}</h1>
-            <p>Rating: {{dinner.rating|floatformat:-2}}/5 <br/>
-                Ready in: {{dinner.minutes}} min
+            <p><i class="far fa-star"></i>Rating: {{dinner.rating|floatformat:-2}}/5 <br/>
+              <i class="far fa-clock"></i>Ready in: {{dinner.minutes}} min<br />
+              <i class="fab fa-gripfire"></i> Cals: 
             </p>
             <span>Dinner</span>
           </article>
@@ -124,7 +127,7 @@
           <div class="modal-content">
             <span onclick="closeModal('{{dinner.id}}')" class="close"><i class="far fa-times-circle"></i></span>
             <h1><i class="fas fa-utensils"></i> {{dinner.title}}</h1>
-            <p><i class="far fa-star"></i> Rating: {{dinner.rating|floatformat:-2}}/5<br><i class="far fa-clock"></i> Ready in: {{dinner.minutes}} minutes</p>
+            <p><i class="far fa-star"></i> Rating: {{dinner.rating|floatformat:-2}}/5<br><i class="far fa-clock"></i> Ready in: {{dinner.minutes}} minutes<br /><i class="fab fa-gripfire"></i> Calories: </p>
             <h2><i class="fas fa-list-ul"></i> Ingredients</h2>
             <ul>
               {% for ingredient in dinner.ingredients %}
