--- a/app/templates/app/userInfo.html
+++ b/app/templates/app/userInfo.html
@@ -9,6 +9,9 @@
       <p>
         {{ field.label_tag }}<br>
         {{ field }}
+        {% if field.help_text %}
+            <small style="color: grey">{{ field.help_text|safe }}</small>
+        {% endif %}
         {% for error in field.errors %}
           <p style="color: #FF653A">{{ error }}</p>
         {% endfor %}
