Fixed brian typo, added 2 br elements on signup

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,7 +41,7 @@
   <br>
 
   <div class="footer">
-    <p><span class="logoFont white">mealy</span> | made with <i class="fas fa-heart red"></i> by Brain, Zack D, Zach L, Zach W, and Sean</p>
+    <p><span class="logoFont white">mealy</span> | made with <i class="fas fa-heart red"></i> by Brian, Zack D, Zach L, Zach W, and Sean</p>
   </div>
 </body>
 </html>
