Fixed incorrect meals page dashboard button text

--- a/app/templates/app/meals.html
+++ b/app/templates/app/meals.html
@@ -27,7 +27,7 @@
   <div class="band">
     <div class="mealPlanBanner">
       <h1>This Week's Meals</h1>
-      <p>Here is your weekly meal plan! Select a meal to see what ingredients you need and how to prepare it. If you'd like to return to the dashboard, click the dashboard button below. When you want to generate a new meal plan for another week, or if you're unhappy with the current meal plan, hit the new meals button below.</p>
+      <p>Here is your weekly meal plan! Select a meal to see what ingredients you need and how to prepare it. When you want to generate a new meal plan for another week, or if you're unhappy with the current meal plan, hit the new meals button below.</p>
       <form class="" action="" method="POST">
       {% csrf_token %}
       {{ form.as_p }}
