Removed text message stuff

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="itemWide">
             <h2>Mealy Dashboard</h2>
-            <p>This is the dashboard! You can get started by clicking one of these cards to set up text message meal reminders, update your ingredient preferences, and to view your tailored meal plan!</p>
+            <p>This is the dashboard! You can get started by clicking one of these cards to set up your personal information and diet goals, update your ingredient preferences, and to view your tailored meal plan!</p>
             <br>
         </div>
         <div class="item">
@@ -23,7 +23,7 @@
                 <div class="thumb" style="background-image: url(https://www.graphicpear.com/wp-content/uploads/2018/02/Device-Icons-Dark.jpg);"></div>
                 <article>
                     <h1>User Info</h1>
-                    <p>Update your personal information and set up your accont to receive sms meal prep reminders!
+                    <p>Update your personal information so we know what you can't eat!
                     </p>
                     <span>User Info</span>
                 </article>
