--- a/app/templates/app/userInfo.html
+++ b/app/templates/app/userInfo.html
@@ -4,7 +4,7 @@
   <br>
   <br>
   <h2>First, Some Information</h2>
-  <p>We use this information to make sure you get the exact meals you want at your preferred time of day. We'll even text you a reminder when it's time to start cooking!</p>
+  <p>We use this information to make sure you get the exact meals you want, without any ingredients that you can't have!</p>
   <form method="post">
     {% csrf_token %}
     {% for field in form %}
